--- a/Tugas/MyNote/app/src/main/AndroidManifest.xml
+++ b/Tugas/MyNote/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyNote"
         android:name=".NoteApplication"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
         <!-- Hanya MainActivity sebagai titik masuk -->
